# testbotdlyadeda

./: .gitignore  README.md  pyproject.toml
rating_bot/: .env.example  __main__.py  bot.py  config.py  messages.py  states.py
rating_bot/services/: __init__.py  get_rating.py
tests/: test_get_rating.py
